[package]
edition = "2021"
name = "unique-ids"
version = "0.1.0"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
maelstrom = {path = "../maelstrom"}
serde = "1.0.163"
serde_derive = "1.0.163"
tokio = {version = "1.28.1", features = ["full"]}
uuid = {version = "1.3.2", features = ["serde", "v4"]}
